changed cards on dashboard
